<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8sp">

            <EditText
                android:id="@+id/name_of_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"/>

            <TextView
                android:text="@string/toppings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"/>

            <CheckBox
                android:id="@+id/whipped_cream"
                android:text="@string/whipped_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:paddingLeft="24dp" />

            <CheckBox
                android:id="@+id/chocolade_checkbox"
                android:text="@string/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="12dp"
                android:paddingLeft="24dp" />

            <TextView
                android:text="@string/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:text="-"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:textSize="23dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:onClick="decrement"
                    android:backgroundTint="#bcbcbc" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:textSize="25sp"
                    android:textColor="@color/black"/>

                <Button
                    android:text="+"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:textSize="23dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:onClick="increment"
                    android:backgroundTint="#bcbcbc"
                    />

            </LinearLayout>

            <Button
                android:text="@string/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:onClick="submitOrder"
                android:backgroundTint="#bcbcbc"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>